<resources>
    <string name="app_name">NMedia</string>
    <string name="greeting">NMedia!</string>
    <string name="description_post_author_avatar">post author avatar</string>
    <string name="description_post_menu">post menu</string>
    <string name="description_post_likes">post likes</string>
    <string name="description_post_shares">post shares</string>
    <string name="description_post_views">post views</string>
    <string name="description_post_save">save</string>
    <string name="menu_remove">remove</string>
    <string name="post_text">post text</string>
    <string name="menu_edit">edit</string>
    <string name="error_empty_content">content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">add post</string>
    <string name="cancel">cancel</string>
    <string name="play_button">Play Button</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="headlineNewPostSystemBack">Back to posts feed</string>
    <string name="messageNewPostSystemBack">Are you sure? Changes will not be applied</string>
    <string name="yesButton">Yes</string>
    <string name="NoButton">No</string>
</resources>