<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:src="@drawable/post_avatar_drawable"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/topBarrier"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@sample/posts.json/data/authorAvatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintBottom_toBottomOf="@id/topBarrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/topBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu"
        />

    <TextView
        android:id="@+id/content"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/topBarrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autoLink="web"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@sample/posts.json/data/content"
        android:paddingBottom="@dimen/common_spacing"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/contentBarrier"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id="@+id/likes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
        app:srcCompat="@drawable/ic_likes"
        android:layout_width="@dimen/common_ics"
        android:layout_height="@dimen/common_ics"
        android:paddingEnd="@dimen/common_spacing"
        android:contentDescription="@string/description_post_likes" />

    <TextView
        android:id="@+id/likes_number"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10"
        android:paddingEnd="@dimen/common_spacing"
        />

    <ImageView
        android:id="@+id/share"
        app:layout_constraintStart_toEndOf="@id/likes_number"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
        app:srcCompat="@drawable/ic_share"
        android:layout_width="@dimen/common_ics"
        android:layout_height="@dimen/common_ics"
        android:paddingEnd="@dimen/common_spacing"
        android:contentDescription="@string/description_post_shares" />

    <TextView
        android:id="@+id/shares_number"
        app:layout_constraintStart_toEndOf="@id/share"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10"
        android:paddingEnd="@dimen/common_spacing"
        />

    <ImageView
        android:id="@+id/views"
        app:layout_constraintEnd_toStartOf="@id/views_number"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
        app:srcCompat="@drawable/ic_eye"
        android:layout_width="@dimen/common_ics"
        android:layout_height="@dimen/common_ics"
        android:paddingEnd="@dimen/common_spacing"
        android:contentDescription="@string/description_post_views" />

    <TextView
        android:id="@+id/views_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10"
        />

</androidx.constraintlayout.widget.ConstraintLayout>